--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,19 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  
+  {%- if jekyll.environment == 'production' -%}
+  <script>
+    (function () {
+        window.counterscale = {
+            q: [["set", "siteId", "dancocos-com"], ["trackPageview"]],
+        };
+    })();
+</script>
+<script
+    id="counterscale-script"
+    src="https://counterscale.dan-f97.workers.dev"
+    defer
+></script>
+{%- endif -%}
 </head>
